resource-manifests/ingress/coit-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "frontend.chitti.info"
    secretName: frontend.chitti.info
  rules:
  - host: "frontend.chitti.info"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coit-frontend-lb
            port:
              number: 80
